--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,3 +19,27 @@ jobs:
              --repo="$GITHUB_REPOSITORY" \
              --title="${TAG_NAME#v}" \
              --generate-notes
+
+  publish-npm:
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    name: "Publish the new version to the npmjs"
+    runs-on: ubuntu-22.04
+    needs: release
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          cache: "npm"
+          node-version: 18.x
+          architecture: x64
+          registry-url: https://registry.npmjs.org/
+      - name: Run NPM Install
+        run: npm ci && npm run build
+      - name: Publish
+        run: |
+          cd dist
+          npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
